LIBFCREPO-1860. Update webapp to use Fedora 7.
- updated Java version to 25
- updated dependency versions
- moved setenv.sh to the docker configs
- made logging easily configurable using environment variables
- updated Dockerfile to use the exploded WAR file for improved startup performance
- created a Docker compose file for running just the webapp
- include UMD custom namespaces in the namespaces.yml config
- updated index.html to be based on the upstream Fedora 7 landing page
- added webdoc.xsl that generates PUML from the web.xml filter chain
- removed hand-created ServletFilters.puml
- removed outdated cargo plugin

https://umd-dit.atlassian.net/browse/LIBFCREPO-1860