@@ -1,159 +1,100 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>org.fcrepo</groupId>
-    <artifactId>fcrepo-parent</artifactId>
-    <version>4.7.6-umd-1.0</version>
-  </parent>
-
   <groupId>edu.umd.lib</groupId>
   <artifactId>umd-fcrepo-webapp</artifactId>
-  <name>UMD Fedora Repository Deployable Web Application</name>
-  <description>The Fedora web application</description>
-  <version>2.9.6</version>
   <packaging>war</packaging>
+  <version>3.0.0-SNAPSHOT</version>
+  <name>UMD Libraries Fedora Web Application</name>
+  <url>https://github.com/umd-lib/umd-fcrepo-webapp</url>
 
   <properties>
-    <fcrepo.version>4.7.6-umd-1.0</fcrepo.version>
-    <warFileName>${project.artifactId}-${project.version}</warFileName>
-    <!-- additional dependency versions -->
-    <apache.commons.validator.version>1.7</apache.commons.validator.version>
-    <java.cas.client.version>3.6.0</java.cas.client.version>
-    <javax.servlet.version>3.1.0</javax.servlet.version>
-    <jersey.version>2.25.1</jersey.version>
-    <jstl.version>1.2</jstl.version>
+    <build.timestamp>${maven.build.timestamp}</build.timestamp>
+    <cas-client.version>4.1.0</cas-client.version>
+    <commons-validator.version>1.7</commons-validator.version>
+    <commons-lang3.version>3.20.0</commons-lang3.version>
+    <fcrepo.version>7.0.0</fcrepo.version>
+    <jakarta-annotation.version>2.1.1</jakarta-annotation.version>
+    <jakarta-servlet.version>6.1.0</jakarta-servlet.version>
+    <jersey.version>4.0.2</jersey.version>
+    <jjwt.version>0.12.6</jjwt.version>
     <junit.version>4.13.1</junit.version>
-    <jwt.version>0.11.2</jwt.version>
     <ldaptive.version>1.2.4</ldaptive.version>
-    <logback.version>1.2.3</logback.version>
-    <pgsql.version>9.4.1211</pgsql.version>
-    <spring.version>5.3.39</spring.version>
-    <spring.security.web.version>5.8.15</spring.security.web.version>
-    <umd.fcrepo.auth.utils.version>1.2.0</umd.fcrepo.auth.utils.version>
+    <!-- maven.build.timestamp.format>yyyy-MM-dd</maven.build.timestamp.format -->
+    <maven.compiler.source>25</maven.compiler.source>
+    <maven.compiler.target>25</maven.compiler.target>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <spring.version>6.2.19</spring.version>
+    <spring-security.version>7.0.6</spring-security.version>
+    <warFileName>${project.artifactId}-${project.version}</warFileName>
   </properties>
-
-  <distributionManagement>
-    <repository>
-      <id>nexus</id>
-      <name>Releases</name>
-      <url>https://maven.lib.umd.edu/nexus/content/repositories/releases</url>
-    </repository>
-    <snapshotRepository>
-      <id>nexus</id>
-      <name>Snapshots</name>
-      <url>https://maven.lib.umd.edu/nexus/content/repositories/snapshots</url>
-    </snapshotRepository>
-  </distributionManagement>
-
-  <repositories>
-    <repository>
-      <id>nexus</id>
-      <name>Releases</name>
-      <url>https://maven.lib.umd.edu/nexus/content/repositories/releases</url>
-      <releases>
-        <enabled>true</enabled>
-      </releases>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-    </repository>
-    <repository>
-      <id>nexus-snapshots</id>
-      <name>Snapshots</name>
-      <url>https://maven.lib.umd.edu/nexus/content/repositories/snapshots</url>
-      <releases>
-        <enabled>false</enabled>
-      </releases>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-    </repository>
-  </repositories>
-
-  <dependencyManagement>
-    <dependencies>
-      <!-- standardize the Spring versions across dependencies -->
-      <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-framework-bom</artifactId>
-        <version>${spring.version}</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
 
   <dependencies>
     <dependency>
-      <groupId>ch.qos.logback</groupId>
-      <artifactId>logback-classic</artifactId>
-      <version>${logback.version}</version>
-    </dependency>
-    <dependency>
       <groupId>org.fcrepo</groupId>
-      <artifactId>fcrepo-kernel-modeshape</artifactId>
+      <artifactId>fcrepo-webapp</artifactId>
       <version>${fcrepo.version}</version>
+      <type>war</type>
+    </dependency>
+
+    <dependency>
+      <groupId>jakarta.servlet</groupId>
+      <artifactId>jakarta.servlet-api</artifactId>
+      <version>${jakarta-servlet.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.fcrepo</groupId>
-      <artifactId>fcrepo-jms</artifactId>
-      <version>${fcrepo.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.fcrepo</groupId>
-      <artifactId>fcrepo-http-api</artifactId>
-      <version>${fcrepo.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.fcrepo</groupId>
-      <artifactId>fcrepo-auth-common</artifactId>
-      <version>${fcrepo.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.fcrepo</groupId>
-      <artifactId>fcrepo-module-auth-webac</artifactId>
-      <version>${fcrepo.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>edu.umd.lib</groupId>
-      <artifactId>umd-fcrepo-auth-utils</artifactId>
-      <version>${umd.fcrepo.auth.utils.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.glassfish.jersey.ext</groupId>
-      <artifactId>jersey-spring3</artifactId>
-      <version>${jersey.version}</version>
-    </dependency>
-    <!-- JDBC dependencies-->
-    <dependency>
-      <groupId>org.postgresql</groupId>
-      <artifactId>postgresql</artifactId>
-      <version>${pgsql.version}</version>
+      <groupId>jakarta.annotation</groupId>
+      <artifactId>jakarta.annotation-api</artifactId>
+      <version>${jakarta-annotation.version}</version>
     </dependency>
 
     <dependency>
       <groupId>org.springframework</groupId>
-      <artifactId>spring-core</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework</groupId>
       <artifactId>spring-web</artifactId>
+      <version>${spring.version}</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-web</artifactId>
-      <version>${spring.security.web.version}</version>
+      <version>${spring-security.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.glassfish.jersey.core</groupId>
+      <artifactId>jersey-common</artifactId>
+      <version>${jersey.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>commons-validator</groupId>
+      <artifactId>commons-validator</artifactId>
+      <version>${commons-validator.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.jasig.cas.client</groupId>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>${commons-lang3.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apereo.cas.client</groupId>
       <artifactId>cas-client-core</artifactId>
-      <version>${java.cas.client.version}</version>
+      <version>${cas-client.version}</version>
     </dependency>
     <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>javax.servlet-api</artifactId>
-      <version>${javax.servlet.version}</version>
-      <scope>compile</scope>
+      <groupId>io.jsonwebtoken</groupId>
+      <artifactId>jjwt-api</artifactId>
+      <version>${jjwt.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.jsonwebtoken</groupId>
+      <artifactId>jjwt-impl</artifactId>
+      <version>${jjwt.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.jsonwebtoken</groupId>
+      <artifactId>jjwt-jackson</artifactId>
+      <version>${jjwt.version}</version>
     </dependency>
     <dependency>
       <groupId>org.ldaptive</groupId>
@@ -162,48 +103,15 @@
     </dependency>
 
     <dependency>
-      <groupId>commons-validator</groupId>
-      <artifactId>commons-validator</artifactId>
-      <version>${apache.commons.validator.version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>io.jsonwebtoken</groupId>
-      <artifactId>jjwt-api</artifactId>
-      <version>${jwt.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>io.jsonwebtoken</groupId>
-      <artifactId>jjwt-impl</artifactId>
-      <version>${jwt.version}</version>
-      <scope>runtime</scope>
-    </dependency>
-    <dependency>
-      <groupId>io.jsonwebtoken</groupId>
-      <artifactId>jjwt-jackson</artifactId> <!-- or jjwt-gson if Gson is preferred -->
-      <version>${jwt.version}</version>
-      <scope>runtime</scope>
-    </dependency>
-    <!-- Uncomment this next dependency if you are using JDK 10 or earlier and you also want to use
-         RSASSA-PSS (PS256, PS384, PS512) algorithms.  JDK 11 or later does not require it for those algorithms:
-    <dependency>
-        <groupId>org.bouncycastle</groupId>
-        <artifactId>bcprov-jdk15on</artifactId>
-        <version>1.60</version>
-        <scope>runtime</scope>
-    </dependency>
-    -->
-    <dependency>
-      <groupId>jstl</groupId>
-      <artifactId>jstl</artifactId>
-      <version>${jstl.version}</version>
-    </dependency>
-
-    <!-- Test dependencies -->
-    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>${junit.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-test</artifactId>
+      <version>${spring.version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -211,19 +119,24 @@
   <build>
     <finalName>${warFileName}</finalName>
 
-    <resources>
-      <resource>
-        <directory>src/main/resources</directory>
-      </resource>
-    </resources>
-
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
-        <version>3.0.0</version>
+        <version>3.5.1</version>
         <configuration>
-          <attachClasses>true</attachClasses>
+          <overlays>
+            <overlay>
+              <groupId>org.fcrepo</groupId>
+              <artifactId>fcrepo-webapp</artifactId>
+              <!-- excludes>
+                <exclude>WEB-INF/no-auth-web.xml</exclude>
+                <exclude>WEB-INF/classes/logback.xml</exclude>
+                <exclude>WEB-INF/classes/namespaces.yml</exclude>
+                <exclude>favicon.ico</exclude>
+              </excludes -->
+            </overlay>
+          </overlays>
           <webResources>
             <resource>
               <directory>src/main/webapp</directory>
@@ -233,81 +146,24 @@
               </includes>
             </resource>
           </webResources>
-          <archive>
-            <index>true</index>
-            <manifest>
-              <addClasspath>true</addClasspath>
-              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
-            </manifest>
-          </archive>
         </configuration>
       </plugin>
       <plugin>
-        <groupId>org.codehaus.cargo</groupId>
-        <artifactId>cargo-maven2-plugin</artifactId>
-        <version>1.8.1</version>
+        <artifactId>maven-antrun-plugin</artifactId>
+        <version>3.2.0</version>
+        <dependencies>
+          <dependency>
+            <groupId>net.sf.saxon</groupId>
+            <artifactId>Saxon-HE</artifactId>
+            <version>12.5</version>
+          </dependency>
+        </dependencies>
         <configuration>
-          <container>
-            <containerId>tomcat7x</containerId>
-            <!-- download zip url -->
-            <zipUrlInstaller>
-              <url>http://archive.apache.org/dist/tomcat/tomcat-7/v7.0.88/bin/apache-tomcat-7.0.88.zip</url>
-              <downloadDir>${project.build.directory}/downloads</downloadDir>
-              <extractDir>${project.build.directory}/extracts</extractDir>
-            </zipUrlInstaller>
-            <systemProperties>
-              <MODESHAPE_DB_URL>jdbc:postgresql://localhost:5432/fcrepo_modeshape5</MODESHAPE_DB_URL>
-              <MODESHAPE_DB_DRIVER>org.postgresql.Driver</MODESHAPE_DB_DRIVER>
-              <MODESHAPE_DB_USERNAME>fcrepo</MODESHAPE_DB_USERNAME>
-              <FCREPO_BASE_URL>http://localhost:8080/</FCREPO_BASE_URL>
-              <ACTIVEMQ_URL>tcp://localhost:61616</ACTIVEMQ_URL>
-              <CAS_URL_PREFIX>https://shib.idm.umd.edu/shibboleth-idp/profile/cas</CAS_URL_PREFIX>
-              <LDAP_URL>ldap://directory.umd.edu</LDAP_URL>
-              <LDAP_BASE_DN>ou=people,dc=umd,dc=edu</LDAP_BASE_DN>
-              <LDAP_BIND_DN>uid=libr-fedora,cn=auth,ou=ldap,dc=umd,dc=edu</LDAP_BIND_DN>
-              <LDAP_MEMBER_ATTRIBUTE>memberOf</LDAP_MEMBER_ATTRIBUTE>
-              <LDAP_ADMIN_GROUP>cn=Application_Roles:Libraries:FCREPO:FCREPO-Administrator,ou=grouper,ou=group,dc=umd,dc=edu</LDAP_ADMIN_GROUP>
-              <LDAP_USER_GROUP>cn=Application_Roles:Libraries:FCREPO:FCREPO-User,ou=grouper,ou=group,dc=umd,dc=edu</LDAP_USER_GROUP>
-              <IP_MAPPING_FILE>conf/test-ip-mapping.properties</IP_MAPPING_FILE>
-              <IP_MAPPING_HEADER_NAME>X-Auth-IP-Mapping</IP_MAPPING_HEADER_NAME>
-            </systemProperties>
-          </container>
-          <configuration>
-            <properties>
-              <!-- the umd-fcrepo_mail service uses the default (8025) -->
-              <cargo.rmi.port>1099</cargo.rmi.port>
-              <!-- Debug Mode On -->
-              <cargo.jvmargs>-Xdebug -Xnoagent -Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=n -Xms512m -Xmx1024m -XX:MaxPermSize=256m -XX:+UseParNewGC -XX:+UseConcMarkSweepGC</cargo.jvmargs>
-              <!-- Debug Mode Off -->
-              <!--<cargo.jvmargs>-Xnoagent -Xms512m -Xmx1024m -XX:MaxPermSize=256m -XX:+UseParNewGC -XX:+UseConcMarkSweepGC</cargo.jvmargs>-->
-            </properties>
-            <configfiles>
-              <configfile>
-                <!-- Include "test-ip-mapping.properties" for the IP Mapping Filter for use as default mapping file-->
-                <file>${project.basedir}/src/test/resources/test-ip-mapping.properties</file>
-                <todir>conf</todir>
-              </configfile>
-            </configfiles>
-          </configuration>
-          <deployables>
-            <deployable>
-              <properties>
-                <context>/</context>
-              </properties>
-            </deployable>
-          </deployables>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>io.fabric8</groupId>
-        <artifactId>docker-maven-plugin</artifactId>
-        <version>0.37.0</version>
-        <configuration>
-          <images>
-            <image>
-              <name>docker.lib.umd.edu/fcrepo-webapp:%l</name>
-            </image>
-          </images>
+          <target>
+            <xslt in="src/main/webapp/WEB-INF/web.xml" out="docs/ServletFilters.puml" style="src/xslt/webdoc.xsl">
+              <factory name="net.sf.saxon.BasicTransformerFactory"/>
+            </xslt>
+          </target>
         </configuration>
       </plugin>
     </plugins>
